--- a/Exemplos/Exemplo_05/Index.html
+++ b/Exemplos/Exemplo_05/Index.html
@@ -10,8 +10,8 @@
 <body>
 	<div class='container'>
 		<h2>Impressão de tabelas</h2>
-		<tt>Transações de Maio, 2011</tt>
-		<table>
+		<center><tt>Transações de Maio, 2011</tt></center>
+		<table>		
 			<tr>
 				<td>
 					<a href="http://exemplo/transacao/1">Transação 1
